Cambio de Variables

--- a/src/components/SolarPanel.astro
+++ b/src/components/SolarPanel.astro
@@ -14,14 +14,9 @@
 				<footer class="flex flex-col flex-grow justify-end pb-20 ">
 					<div >
 								<a
-								class="border-2 border-white text-sm rounded bg-white text-back font-medium px-12 py-2 inline-block
-								mx-2 hover:bg-slate-900 hover:text-white hover:border-slate-900 transition-colors duration-500"
-								href="">Explora el inventario</a>
-
-								<a
 								class="border-2 border-slate-900 text-sm rounded bg-slate-900 text-white font-medium  px-12 py-2 inline-block
 								hover:text-black mx-2 hover:bg-white hover:border-white transition-colors duration-500"
-								href="">Explora el inventario</a>	
+								href="">Mas información</a>	
 					</div>
 				</footer>
 			</div>
