--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 //Importa los componentes necesarios
 
-import MainSection from "../components/MainSection.astro";
+import ModelY from "../components/Model-Y.astro";
 import LandingHeader from "../components/LandingHeader.astro";
 import Layout from "../layouts/Layout.astro";
 import Model3 from "../components/Model-3.astro";
@@ -16,10 +16,10 @@ import Accesories from "../components/Accesories.astro"
 	<LandingHeader/>
 	<main class="snap-y snap-mandatory relative w-full h-screen overflow-auto overflow-x-hidden ">
 		<div class="snap-center">
-			<MainSection />
+			<Model3 />
 		</div>
 		<div class="snap-center">
-			<Model3 />
+			<ModelY />
 		</div>
 		<div class="snap-center">
 			<ModelX/>
