--- a/src/components/Model-3.astro
+++ b/src/components/Model-3.astro
@@ -1,25 +1,25 @@
 <section
 			class="landing-section bg-black h-screen w-screen text-center overflow-hidden relative"
-			
+			data-header-color="black"
 		>
 			<div class="z-30 relative h-full flex flex-col">
 				<header>
-					<h2 class="text-white pt-[107px] font-medium text-[40px]">
+					<h2 class="text-black pt-[107px] font-medium text-[40px]">
 						Model 3
 					</h2>
 				</header>
 				<footer class="flex flex-col flex-grow justify-end pb-20 ">
 					<div >
-								<a
-								class="border-2 border-white text-sm rounded bg-white text-back font-medium px-12 py-2 inline-block
-								mx-2 hover:bg-slate-900 hover:text-white hover:border-slate-900 transition-colors duration-500"
-								href="">Explora el inventario</a>
+						<a
+						class="border-2 border-white text-sm rounded bg-white text-back font-medium px-12 py-2 inline-block
+						mx-2 hover:bg-slate-900 hover:text-white hover:border-slate-900 transition-colors duration-500"
+						href="">Orden personalizada</a>
 
-								<a
-								class="border-2 border-slate-900 text-sm rounded bg-slate-900 text-white font-medium  px-12 py-2 inline-block
-								hover:text-black mx-2 hover:bg-white hover:border-white transition-colors duration-500"
-								href="">Explora el inventario</a>	
-					</div>
+						<a
+						class="border-2 border-slate-900 text-sm rounded bg-slate-900 text-white font-medium  px-12 py-2 inline-block
+						hover:text-black mx-2 hover:bg-white hover:border-white transition-colors duration-500"
+						href="">Prueba de manejo</a>	
+			</div>
 				</footer>
 			</div>
 
