--- a/src/components/Model-S.astro
+++ b/src/components/Model-S.astro
@@ -13,12 +13,12 @@
 								<a
 								class="border-2 border-white text-sm rounded bg-white text-back font-medium px-12 py-2 inline-block
 								mx-2 hover:bg-slate-900 hover:text-white hover:border-slate-900 transition-colors duration-500"
-								href="">Explora el inventario</a>
+								href="">Orden personalizada</a>
 
 								<a
 								class="border-2 border-slate-900 text-sm rounded bg-slate-900 text-white font-medium  px-12 py-2 inline-block
 								hover:text-black mx-2 hover:bg-white hover:border-white transition-colors duration-500"
-								href="">Explora el inventario</a>	
+								href="">Prueba de manejo</a>	
 					</div>
 				</footer>
 			</div>
